<resources>
    <string name="app_name">WhereWasMe</string>
    <string name="title_activity_maps">Map</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAg-PFCRPY9m89QJ4LgOUvffUN6YCBiYzA</string>

    <string name="app_id">358690254478521</string>
    <string name="latitude">Latitude :</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="longitude">Longitude :</string>
    <string name="time_update">TimeUpdate :</string>
    <string name="where_was_i">Where Was I</string>
    <string name="add_new_data">Add New Data</string>
    <string name="see_saved_data">See Saved Data</string>
    <string name="add_new_file">Add New File</string>
    <string name="show_stored_files">Show Stored Files</string>
    <string name="enter_the_file_name">Enter The File Name</string>
    <string name="file_name">File Name</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="marker_at_me">Market At Me</string>
    <string name="gps_is_disabled_go_to_settings">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="settings">Settings</string>
    <string name="please_enable_gps">Please enable GPS</string>
</resources>
