<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/sky_blue"
        android:gravity="center"
        android:padding="@dimen/d_15"
        android:text="@string/enter_the_file_name"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/etFileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="start"
        android:hint="@string/file_name"
        android:maxLines="1"
        android:padding="@dimen/d_15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/sky_blue"
            android:gravity="center"
            android:padding="@dimen/d_15"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="@dimen/dp_4"
            android:layout_height="match_parent"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/sky_blue"
            android:gravity="center"
            android:padding="@dimen/d_15"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"
            android:textStyle="bold" />
    </LinearLayout>


</LinearLayout>