<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/llLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLatitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/latitude"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvLatitudeValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lorem_ipsum"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLatitude"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvLongitude"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/longitude"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvLongitudeValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lorem_ipsum"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTimeUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLongitude"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTimeUpdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/time_update"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTimeUpdateValue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/lorem_ipsum"
            android:textSize="18sp" />
    </LinearLayout>
    


</RelativeLayout>